--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^28.1.4",
     "babel-jest": "^28.1.2",
     "jest": "^28.1.2",
+    "prettier": "2.7.1",
     "typescript": "^4.7.4"
   }
 }
